--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -192,7 +192,13 @@
         class="imp-banner"
         style="display: flex; justify-content: start; gap: 10px"
       >
-        <span style="font-weight: 400; color: black; width: 130px"
+        <span
+          style="
+            font-weight: 400;
+            color: black;
+            width: fit-content;
+            white-space: nowrap;
+          "
           ><img src="../../../assets/info-icon.png" /> Important Note:</span
         >
         <p style="margin-bottom: 0">
