--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -113,12 +113,12 @@
       <div class="a_top">
         <!-- <button> -->
         <div class="a_top_1">
-          <h1>
-            <img
+          <h1 style="font-size: 20px">
+            <!-- <img
               style="height: 15px; width: 15px"
               (click)="toggleBanner()"
               src="../../../assets/info-icon.png"
-            />
+            /> -->
             All Messages
           </h1>
           <!-- </button> -->
