--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -494,7 +494,7 @@
       Add QR Code
     </button>
   </div>
-  <div class="note-banner" style="margin-bottom: 40px">
+  <!-- <div class="note-banner" style="margin-bottom: 40px">
     <strong
       ><img src="../../../assets/info-icon.png" /> Important Note:
     </strong>
@@ -509,7 +509,7 @@
     <button>
       <img src="../../../assets/close-icon.png" />
     </button>
-  </div>
+  </div> -->
   <div class="qr-table">
     <div class="qr-table-head">
       <div>No</div>
