--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -707,3 +707,65 @@ input[type="number"] {
 .postcode-list-h:hover p {
   display: inline-block;
 }
+
+.saa {
+  display: flex;
+  gap: 30px;
+  position: relative;
+}
+
+.saa div {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.saa div p {
+  color: #151d48;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.36px;
+  white-space: nowrap;
+  margin-bottom: 0;
+}
+
+.saa div input {
+  outline: none;
+  background-color: transparent;
+  color: #768396;
+  padding: 0.7rem;
+  line-height: normal;
+  border-radius: 9px;
+  border: 1px solid #e5e5ed;
+  width: 250px;
+}
+
+.saa .btn-con {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.saa .btn-con button {
+  border-radius: 8px;
+  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  outline: none;
+  padding: 0.75rem 1rem;
+  color: #fff;
+  font-family: Poppins;
+  cursor: pointer;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
