--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -305,6 +305,24 @@
         </div>
       </div>
     </div>
+    <div class="c-bg-heading">Segs</div>
+    <div class="p-c-l saa">
+      <div>
+        <p>Pickup:</p>
+        <input [disabled]="!btn6" [(ngModel)]="sAAPickup" />
+      </div>
+      <div>
+        <p>Destination:</p>
+        <input [disabled]="!btn6" [(ngModel)]="sAADestination" />
+      </div>
+      <div class="btn-con">
+        <button *ngIf="!btn6" (click)="startEdit('btn6')">Edit</button>
+        <button *ngIf="btn6" (click)="save('btn6'); updateSearchAddress()">
+          Save
+        </button>
+        <button *ngIf="btn6" (click)="cancel('btn6')">Cancel</button>
+      </div>
+    </div>
     <div class="c-bg-heading postcode-list-h">
       Postcode list
       <img style="width: 20px" src="../../../assets/warning.png" />
