--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -305,7 +305,7 @@
         </div>
       </div>
     </div>
-    <div class="c-bg-heading">Segs</div>
+    <div class="c-bg-heading">Search Address Addition</div>
     <div class="p-c-l saa">
       <div>
         <p>Pickup:</p>
