--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -4,7 +4,7 @@
     style="
       display: flex;
       justify-content: start;
-      gap: 10px;
+      gap: 5px;
       position: relative;
       align-items: start;
     "
@@ -15,7 +15,6 @@
         display: inline-flex;
         align-items: center;
         gap: 5px;
-        width: 170px;
         white-space: nowrap;
         height: fit-content;
       "
@@ -23,8 +22,8 @@
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        width="20"
-        height="20"
+        width="15"
+        height="15"
         viewBox="0 0 20 20"
         fill="none"
       >
@@ -33,9 +32,9 @@
           fill="#636364"
         />
       </svg>
-      <span style="padding-left: 10px">Important Message:</span>
+      <span style="font-size: 14px">Important Message:</span>
     </span>
-    <p style="padding-top: 2px">
+    <p style="font-size: 13px; font-weight: 400; color: black">
       Adding phone numbers to blocked list will prevent that number from
       receiving WhatApp and/or SMS. Add the number below and select the message
       types you do not want the number to receive.
