--- a/src/app/screens/chatbot-analytics/chatbot-analytics.component.html
+++ b/src/app/screens/chatbot-analytics/chatbot-analytics.component.html
@@ -1,43 +1,51 @@
 <div>
-    <div class="top">
-        <div class="top-col1">
-            <div class="analytics-container">
-                <div class="header">
-                    <p>Today : Wednesday</p>
-                    <p>Date : 15 / 01 / 2025</p>
-                </div>
-                <h1>Chatbot Analytics</h1>
-                <p class="subtitle">Always stay updated in your Customer portal</p>
+  <div class="top">
+    <div class="top-col1">
+      <div class="analytics-container">
+        <div class="header">
+          <p>Today : Wednesday</p>
+          <p>Date : 15 / 01 / 2025</p>
+        </div>
+        <h1>Chatbot Analytics</h1>
+        <p class="subtitle">Always stay updated in your Customer portal</p>
 
-                <div class="buttons">
-                    <button class="time-button-outline">All Time</button>
-                    <button class="time-button">Monthly</button>
-                    <button class="time-button">Weekly</button>
-                    <button class="time-button">Daily</button>
-                </div>
-            </div>
+        <div class="buttons">
+          <button class="time-button-outline">All Time</button>
+          <button class="time-button">Monthly</button>
+          <button class="time-button">Weekly</button>
+          <button class="time-button">Daily</button>
         </div>
-        <div class="top-col2">
-            <img style="height: 12rem;" src="../../../assets/img/file.png">
-        </div>
+      </div>
     </div>
-    <div *ngIf="data">
-        <div class="analytics-bar">
-            <app-overview-cards [totalInteractions]="0" [totalBookings]="data.total" [bookingConversionRate]="0"
-                [totalTripValue]="0" [averageFare]="0"></app-overview-cards>
-        </div>
-        <div class="main-analytics-wrapper row">
-            <div class="col-md-3 first-col">
-                <app-total-bookings [totalBookings]="data.total"></app-total-bookings>
-                <app-total-ttv></app-total-ttv>
-            </div>
-            <div class="col-md-3 second-col">
-                <app-booking-details [asap]="data.asap" [pre_booking]="data.pre_booking"></app-booking-details>
-                <app-vehicle-insights [data]="data.vehicle_type"></app-vehicle-insights>
-            </div>
-            <div class="col-md-6">
-                <app-customer-details></app-customer-details>
-            </div>
-        </div>
+    <div class="top-col2">
+      <img style="height: 16rem" src="../../../assets/img/file.png" />
     </div>
+  </div>
+  <div *ngIf="data">
+    <div class="analytics-bar">
+      <app-overview-cards
+        [totalInteractions]="0"
+        [totalBookings]="data.total"
+        [bookingConversionRate]="0"
+        [totalTripValue]="0"
+        [averageFare]="0"
+      ></app-overview-cards>
+    </div>
+    <div class="main-analytics-wrapper row">
+      <div class="col-md-3 first-col">
+        <app-total-bookings [totalBookings]="data.total"></app-total-bookings>
+        <app-total-ttv></app-total-ttv>
+      </div>
+      <div class="col-md-3 second-col">
+        <app-booking-details
+          [asap]="data.asap"
+          [pre_booking]="data.pre_booking"
+        ></app-booking-details>
+        <app-vehicle-insights [data]="data.vehicle_type"></app-vehicle-insights>
+      </div>
+      <div class="col-md-6">
+        <app-customer-details></app-customer-details>
+      </div>
+    </div>
+  </div>
 </div>
