--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -298,7 +298,7 @@
 .imp-banner {
   background: rgba(46, 188, 150, 0.2);
   border: 1px solid rgba(46, 188, 150, 0.5);
-  padding: 10px;
+  padding: 20px;
   border-radius: 20px;
   width: 95%;
   margin: auto;
@@ -319,6 +319,7 @@
   color: #737791;
   text-align: left;
   margin-bottom: 0;
+  font-family: "DM Sans";
 }
 
 .emoji-tab {
