--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -114,25 +114,24 @@
 
   <!-- Right Section -->
   <div class="right" style="width: 85%">
-    <div
-      class="imp-banner"
-      style="display: flex; gap: 10px; align-items: start"
-    >
+    <div class="imp-banner" style="display: flex; gap: 5px; align-items: start">
       <span
         style="
           width: fit-content;
           white-space: nowrap;
           display: flex;
           align-items: center;
-          gap: 10px;
+          gap: 5px;
           height: fit-content;
+          font-size: 14px;
 
-          font-weight: 600;
+          font-weight: 500;
           color: black;
+          font-family: 'DM Sans';
         "
         ><img src="../../../assets/info-icon.png" /> Important Note:</span
       >
-      <p>
+      <p style="font-size: 14px; color: black">
         For all message types there are three versions that are used for
         WhatsApp and one for SMS fall-over, all four must be edited accordingly.
         Where you see @ in the message content, this is data collected from your
@@ -238,7 +237,7 @@
 
     <div
       class="imp-banner"
-      style="display: flex; gap: 10px; align-items: start"
+      style="display: flex; gap: 5px; align-items: start"
       *ngIf="
         instanceData[0].isEditable ||
         instanceData[1].isEditable ||
@@ -247,18 +246,20 @@
     >
       <span
         style="
-          font-weight: 600;
+          font-weight: 500;
           color: black;
           white-space: nowrap;
           width: fit-content;
           display: flex;
-          gap: 10px;
+          gap: 5px;
           align-items: center;
           height: fit-content;
+          font-family: 'DM Sans';
+          font-size: 14px;
         "
         ><img src="../../../assets/info-icon.png" /> Important Note:</span
       >
-      <p>
+      <p style="font-size: 14px; color: black">
         Sending too many URLs can increase the risk of a WhatsApp account ban
         due to spam-detection policies. Ensure all messages are relevant and
         provide clear value to recipients. Avoid repetitive or promotional
@@ -272,19 +273,25 @@
         Messages For SMS
       </h1>
     </div>
-    <div
-      class="imp-banner"
-      style="border-radius: 10px"
-      *ngIf="instanceData[3].isEditable"
-    >
-      <p style="display: flex; align-items: center; gap: 10px">
+    <div class="imp-banner" *ngIf="instanceData[3].isEditable">
+      <p
+        style="
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          font-size: 14px;
+          color: black;
+        "
+      >
         <span
           style="
-            font-weight: 600;
+            font-weight: 500;
             color: black;
             display: inline-flex;
             align-items: center;
-            gap: 10px;
+            gap: 5px;
+            font-size: 14px;
+            font-family: 'DM Sans';
           "
           ><img src="../../../assets/info-icon.png" /> Important Note:</span
         >
