--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -320,30 +320,32 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: start;
-  gap: 20px;
+  gap: 5px;
 
   border-radius: 20px;
   border: 1px solid rgba(46, 188, 150, 0.5);
   background: rgba(46, 188, 150, 0.2);
   padding: 15px;
   margin-bottom: 20px;
+  font-family: "DM Sans";
 }
 
 .note-banner * {
   white-space: nowrap;
+  font-size: 14px;
+  font-family: "DM Sans";
 }
 
 .note-banner strong {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
 
   color: var(--dark-color, #181818);
   /* Texi */
-  font-family: Nunito;
   font-size: 14px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
   letter-spacing: 0.54px;
 }
@@ -492,6 +494,7 @@ h2 {
   line-height: normal;
   letter-spacing: 0.54px;
   width: 250px;
+  text-align: center;
   min-width: 250px;
 }
 
@@ -505,6 +508,7 @@ h2 {
   letter-spacing: 0.54px;
   width: 200px;
   min-width: 200px;
+  text-align: center;
 }
 
 .qr-table-item div:nth-child(5) {
@@ -513,6 +517,7 @@ h2 {
   justify-content: center;
   width: 250px;
   min-width: 250px;
+  text-align: center;
 
   color: var(--text, #636364);
   font-family: Nunito;
@@ -533,6 +538,7 @@ h2 {
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.42px;
+  text-align: center;
 }
 
 .qr-table-item div:nth-child(7) {
@@ -895,11 +901,12 @@ h2 {
 .cus-modal-3 {
   display: flex;
   gap: 10px;
+  flex-direction: column;
 }
 
 .cus-modal-3-settings,
 .cus-modal-3-qr {
-  width: 50%;
+  width: fit-content;
   border: 1px dashed lightgrey;
   border-radius: 13px;
   padding: 24px;
@@ -920,4 +927,94 @@ h2 {
   line-height: 42px; /* 210% */
   letter-spacing: -0.4px;
   margin-bottom: 0;
+}
+
+.cus-modal-3-0-shape {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.cus-modal-3-0-shape div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 42px; /* 300% */
+  letter-spacing: -0.28px;
+  text-transform: capitalize;
+  white-space: nowrap;
+}
+
+.cus-modal-3-0-shape div img {
+  width: 55px;
+  height: 55px;
+}
+
+.cus-modal-3-0-color {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.cus-modal-3-0-color div {
+  display: flex;
+  gap: 10px;
+}
+
+.cus-modal-3-0-color div span {
+  display: inline-block;
+  height: 56px;
+  width: 56px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cus-modal-3-0-gradients {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.cus-modal-3-0-gradients div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 42px; /* 210% */
+  letter-spacing: -0.4px;
+}
+
+.cus-modal-3-0-gradients div button {
+  padding: 15px;
+  border-radius: 20px;
+  border: 1px solid lightgray;
+  background: white;
+  aspect-ratio: 1/1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cus-modal-3-0-gradients div span {
+  display: inline-block;
+  height: 56px;
+  width: 56px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
